--- a/.github/workflows/docker-image.yml
+++ b/.github/workflows/docker-image.yml
@@ -46,6 +46,15 @@ jobs:
           docker push $IMAGE_BASE:latest
           docker push $IMAGE_BASE:$VERSION
 
+      # Guard: ensure the PAT secret exists before checking out external repo
+      - name: Ensure DEVOPS_RECIPIES_TOKEN is set
+        env:
+          TOKEN: ${{ secrets.DEVOPS_RECIPIES_TOKEN }}
+        run: |
+          if [ -z "$TOKEN" ]; then
+            echo "Missing DEVOPS_RECIPIES_TOKEN secret. Create a fine-grained PAT with Contents: Read & Write on talhadevops/devops-recipies and add it as a repo secret named DEVOPS_RECIPIES_TOKEN." && exit 1
+          fi
+
       # Update Helm values in talhadevops/devops-recipies so Argo CD picks the new tag
       - name: Checkout devops-recipies (Helm repo)
         uses: actions/checkout@v4
